--- a/api/myapi/information.ini
+++ b/api/myapi/information.ini
@@ -1,2 +1,24 @@
 [config]
 random_length=10
+;文件名随机位数，可调成更高位
+[delete_time]
+month=1_2_3_4_5_6_7_8_9_10_11_12
+;需要删除的月份
+day=1
+;需要删除的日期，最高支持一日一删和永不删除
+[sd_time]
+day=10
+;超过10天未鉴定的将更改为已超时
+[sd_delete]
+sd=0
+[wx]
+name_code=添加堂主微信，一对一交流收藏经验
+image_url=image/index2.jpg
+name_code2=关注予复讲堂公众号，获取更多鉴定知识
+image_url2=image/index3.jpg
+[save_num]
+num=0
+[choose]
+age=唐_五代_宋_北宋_南宋_宋元_元_元明_元末明初_明早期_空白期_明中期_明晚期_明末期_明末清初_清早期_清中早_清中期_清中晚_清晚期_清末民初_民国_民国早期_民国晚期_解放初期_创汇时期_567_80年代以后_当代
+shape=碗_盖碗_盘_杯_碟_杯碟_瓶_罐_尊_壶_文房_塑像_锅_盆_其他
+result=仿品_存疑_一般民窑_精品民窑_一般官窑_精品官窑_国宝
